navbar responsive done

--- a/index.html
+++ b/index.html
@@ -18,42 +18,45 @@
     <body>
         <!-- ===========Navbar start here========== -->
         <nav class="bg-nav_backgroud py-3">
-            <div class="max-w-container mx-auto">
-                <div class="flex items-center">
+            <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
+                <div class="flex items-center justify-between">
                     <div
-                        class="w-[200px] relative after:absolute after:content-[''] after:w-0.5 after:h-20 after:bg-white after:right-0 after:top-[-24px] after:opacity-10">
-                        <img src="images/logo.png" alt>
+                        class="w-[auto] sm:w-[200px] relative after:absolute after:content-[''] after:w-0.5 after:h-20 2xl:after:h-[87px] after:bg-transparent xl:after:bg-white after:right-0 xl:after:right-[-30px] after:top-[-24px] after:opacity-25">
+                        <img class="w-[70%] md:w-full" src="images/logo.png" alt="">
                     </div>
-                    <div class="w-[1080px] flex items-center justify-between">
-                        <ul class="flex gap-x-12 item-center ml-16">
-                            <li>
-                                <a href="#"
-                                    class="text-base font-normal text-white uppercase font-robotocondensed opacity-90 hover:opacity-100">home</a>
-                            </li>
-                            <li>
-                                <a href="#"
-                                    class="text-base font-normal text-white uppercase font-robotocondensed opacity-90 hover:opacity-100">About
-                                    us</a>
-                            </li>
-                            <li>
-                                <a href="#"
-                                    class="text-base font-normal text-white uppercase font-robotocondensed opacity-90 hover:opacity-100">Sermon</a>
-                            </li>
-                            <li>
-                                <a href="#"
-                                    class="text-base font-normal text-white uppercase font-robotocondensed opacity-90 hover:opacity-100">Blog</a>
-                            </li>
-                        </ul>
-                        <a href="#"
-                            class="inline-block bg-primary py-5 px-12 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">contact
-                            us</a>
+                    <div class="hidden lg:block">
+                        <div class="lg:w-[auto] xl:w-[1080px] flex items-center justify-between">
+                            <ul class="flex gap-x-12 item-center ml-16">
+                                <li>
+                                    <a href="#"
+                                        class="text-base font-normal text-white uppercase font-robotocondensed opacity-90 hover:opacity-100">home</a>
+                                </li>
+                                <li>
+                                    <a href="#"
+                                        class="text-base font-normal text-white uppercase font-robotocondensed opacity-90 hover:opacity-100">About
+                                        us</a>
+                                </li>
+                                <li>
+                                    <a href="#"
+                                        class="text-base font-normal text-white uppercase font-robotocondensed opacity-90 hover:opacity-100">Sermon</a>
+                                </li>
+                                <li>
+                                    <a href="#"
+                                        class="text-base font-normal text-white uppercase font-robotocondensed opacity-90 hover:opacity-100">Blog</a>
+                                </li>
+                            </ul>
+                            <a href="#"
+                                class="inline-block bg-primary py-4 px-6 xl:py-5 xl:px-12 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4 ml-8">contact
+                                us</a>
+                        </div>
                     </div>
+                    <div class="block lg:hidden cursor-pointer"><i class="fa-solid fa-bars text-white sm:text-2xl"></i></div>
                 </div>
             </div>
         </nav>
         <!-- ===========Navbar end here========== -->
         <!-- ===========banner start here========== -->
-        <section class="bg-banner bg-no-repeat bg-cover bg-center py-32">
+        <!-- <section class="bg-banner bg-no-repeat bg-cover bg-center py-32">
             <div class="max-w-container mx-auto">
                 <div class="w-[592px]">
                     <h6
@@ -71,10 +74,10 @@
                         do.</p>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- ===========banner end here========== -->
         <!-- ===========service start here========== -->
-        <section class="py-32">
+        <!-- <section class="py-32">
             <div class="max-w-container mx-auto">
                 <div>
                     <h5
@@ -109,10 +112,10 @@
                         <p class="text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
-            </section>
+        </section> -->
             <!-- ===========service end here========== -->
             <!-- ===========love start here========== -->
-            <section class="pb-32">
+            <!-- <section class="pb-32">
                 <div class="max-w-container mx-auto">
                     <div class="text-center">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">SUB-HEADLINE</h5>
@@ -140,10 +143,10 @@
                         <a href="#" class="text-[14px] leading-4 font-normal text-sub_heading capitalize">read more <i class="fa-solid fa-arrow-right-long ml-1.5"></i></a>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- ===========love end here========== -->
             <!-- ===========watch start here========== -->
-            <section class="py-32 bg-watch_background">
+            <!-- <section class="py-32 bg-watch_background">
                 <div class="max-w-container mx-auto">
                     <div class="text-center w-[440px] mx-auto">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">Watch and listen</h5>
@@ -189,10 +192,10 @@
                     </div>
                     <div></div>
                 </div>
-            </section>
+            </section> -->
             <!-- ===========watch end here========== -->
             <!-- ===========upcoming start here========== -->
-            <section class="py-32">
+            <!-- <section class="py-32">
                 <div class="max-w-container mx-auto">
                     <div class="text-center w-[554px] mx-auto">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">Upcoming SERMONS</h5>
@@ -238,10 +241,10 @@
                         <a href="#" class="font-robotocondensed font-normal text-2xl text-sub_heading capitalize">View all Sermons <i class="fa-solid fa-arrow-right-long ml-[11px]"></i></a>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- ===========upcoming end here========== -->
             <!-- ===========visit start here========== -->
-            <section class="bg-visit_bg bg-no-repeat bg-center bg-cover py-32">
+            <!-- <section class="bg-visit_bg bg-no-repeat bg-center bg-cover py-32">
                 <div class="max-w-container mx-auto">
                     <div class="w-[768px] bg-white mx-auto py-[72px] px-[48px] border-b-[16px] border-primary relative">
                         <h2 class="uppercase font-robotocondensed font-bold text-5xl leading-[64px] w-[370px] text-sub_heading">We want to serve the world around us</h2>
@@ -252,10 +255,10 @@
                         </picture>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- ===========visit end here========== -->
             <!-- ===========blog start here========== -->
-            <section class="py-32">
+            <!-- <section class="py-32">
                 <div class="max-w-container mx-auto">
                     <div class="text-center w-[554px] mx-auto">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">Read our Blog</h5>
@@ -296,10 +299,10 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- ===========blog end here========== -->
             <!-- ===========footer start here========== -->
-            <footer class="bg-sub_heading py-16 ">
+            <!-- <footer class="bg-sub_heading py-16 ">
                 <div class="max-w-container mx-auto">
                     <div class="flex">
                         <div>
@@ -365,7 +368,7 @@
                         </div>
                     </div>
                 </div>
-            </footer>
+            </footer> -->
             <!-- ===========footer end here========== -->
             <script src="tailwind.config.js"></script>
         </body>
