--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
         </nav>
         <!-- ===========Navbar end here========== -->
         <!-- ===========banner start here========== -->
-        <!-- <section class="bg-banner bg-no-repeat bg-cover bg-center py-32">
-            <div class="max-w-container mx-auto">
-                <div class="w-[592px]">
+        <section class="bg-banner bg-no-repeat bg-cover bg-center py-20 sm:py-32">
+            <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
+                <div class="w-full sm:w-[490px] md:w-[570px] lg:w-[592px]">
                     <h6
                         class="text-base uppercase font-robotocondensed text-white font-bold">Welcome
                         to our CHURCH</h6>
                     <h1
-                        class="text-banner_heading font-robotocondensed uppercase text-white font-bold pt-4 pb-8">Become
+                        class="text-4xl sm:text-6xl lg:text-banner_heading font-robotocondensed uppercase text-white font-bold pt-4 pb-8">Become
                         a part of our community</h1>
                     <a href="#"
-                        class="inline-block bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">Learn
+                        class="inline-block bg-primary py-5 px-12 sm:py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">Learn
                         more</a>
                     <p
-                        class="w-[338px] mt-16 pl-[30px] font-robotocondensed text-base text-white leading-6 relative after:absolute after:content-[''] after:w-[18px] after:h-0.5 after:bg-primary after:left-0 after:top-3">Lorem
+                        class="w-full sm:w-[338px] mt-16 pl-0 sm:pl-[30px] font-robotocondensed text-base text-white leading-6 relative after:absolute after:content-[''] after:w-[18px] after:h-0.5 after:bg-transparent sm:after:bg-primary after:left-0 after:top-3">Lorem
                         ipsum dolor sit amet, consectetur adipiscing elit, sed
                         do.</p>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- ===========banner end here========== -->
         <!-- ===========service start here========== -->
         <!-- <section class="py-32">
