--- a/index.html
+++ b/index.html
@@ -77,42 +77,43 @@
         </section>
         <!-- ===========banner end here========== -->
         <!-- ===========service start here========== -->
-        <!-- <section class="py-32">
-            <div class="max-w-container mx-auto">
+        <section class="py-10 md:py-32">
+            <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
                 <div>
                     <h5
                         class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">sub-headline</h5>
                     <h3
-                        class="uppercase font-robotocondensed leading-[64px] text-5xl text-sub_heading font-bold text-center pt-4">a
-                        church that's relevant</h3>
+                        class="uppercase font-robotocondensed leading-10 md:leading-[64px] text-3xl md:text-5xl text-sub_heading font-bold text-center pt-1 md:pt-4">a
+                        churlg that's rxlevant</h3>
                 </div>
-                <div class="pt-16 flex gap-[25px] flex-wrap items-center">
-                    <div class="bg-service_item_background p-20 w-[410px] relative after:absolute after:content-[''] after:w-full after:h-4 after:bg-primary after:bottom-0 after:left-0">
+                <div class="pt-6 md:pt-16 flex gap-[15px] md:gap-[25px] flex-wrap items-center justify-center">
+                    <div class="bg-service_item_background p-5 lg:p-8 xl:p-20 w-full sm:w-[48%] lg:w-[250px] xl:w-[385px] relative after:absolute after:content-[''] after:w-full after:h-4 after:bg-primary after:bottom-0 after:left-0">
                         <div
                             class="w-12 h-12 bg-primary rounded-full flex items-center justify-center">
                             <i class="fa-solid fa-hand-holding-heart text-2xl"></i>
                         </div>
-                        <h4 class="uppercase font-robotocondensed font-bold text-[32px] leading-[44px] mt-6 mb-2 text-sub_heading">Get involved</h4>
-                        <p class="text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h4 class="uppercase font-robotocondensed font-bold text-[20px] lg:text-[26px] xl:text-[32px] lg:leading-[30px] xl:leading-[44px] mt-2 md:mt-4 lg:mt-6 mb-1 md:mb-2 text-sub_heading">Get involved</h4>
+                        <p class="text-xs lg:text-sm xl:text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
-                    <div class="bg-service_item_background p-20 w-[410px] relative after:absolute after:content-[''] after:w-full after:h-4 after:bg-primary after:bottom-0 after:left-0">
+                    <div class="bg-service_item_background p-5 lg:p-8 xl:p-20 w-full sm:w-[48%] lg:w-[250px] xl:w-[385px] relative after:absolute after:content-[''] after:w-full after:h-4 after:bg-primary after:bottom-0 after:left-0">
                         <div
                             class="w-12 h-12 bg-primary rounded-full flex items-center justify-center">
                             <i class="fa-solid fa-hand-holding-heart text-2xl"></i>
                         </div>
-                        <h4 class="uppercase font-robotocondensed font-bold text-[32px] leading-[44px] mt-6 mb-2 text-sub_heading">Get involved</h4>
-                        <p class="text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h4 class="uppercase font-robotocondensed font-bold text-[20px] lg:text-[26px] xl:text-[32px] lg:leading-[30px] xl:leading-[44px] mt-2 md:mt-4 lg:mt-6 mb-1 md:mb-2 text-sub_heading">Get involved</h4>
+                        <p class="text-xs lg:text-sm xl:text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
-                    <div class="bg-service_item_background p-20 w-[410px] relative after:absolute after:content-[''] after:w-full after:h-4 after:bg-primary after:bottom-0 after:left-0">
+                    <div class="bg-service_item_background p-5 lg:p-8 xl:p-20 w-full sm:w-[48%] lg:w-[250px] xl:w-[385px] relative after:absolute after:content-[''] after:w-full after:h-4 after:bg-primary after:bottom-0 after:left-0">
                         <div
                             class="w-12 h-12 bg-primary rounded-full flex items-center justify-center">
                             <i class="fa-solid fa-hand-holding-heart text-2xl"></i>
                         </div>
-                        <h4 class="uppercase font-robotocondensed font-bold text-[32px] leading-[44px] mt-6 mb-2 text-sub_heading">Get involved</h4>
-                        <p class="text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h4 class="uppercase font-robotocondensed font-bold text-[20px] lg:text-[26px] xl:text-[32px] lg:leading-[30px] xl:leading-[44px] mt-2 md:mt-4 lg:mt-6 mb-1 md:mb-2 text-sub_heading">Get involved</h4>
+                        <p class="text-xs lg:text-sm xl:text-base font-normal font-robotocondensed text-sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
+                    
                 </div>
-        </section> -->
+        </section>
             <!-- ===========service end here========== -->
             <!-- ===========love start here========== -->
             <!-- <section class="pb-32">
