love part responsive

--- a/index.html
+++ b/index.html
@@ -116,35 +116,36 @@
         </section>
             <!-- ===========service end here========== -->
             <!-- ===========love start here========== -->
-            <!-- <section class="pb-32">
-                <div class="max-w-container mx-auto">
+            <section class="pb-32">
+                <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
                     <div class="text-center">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">SUB-HEADLINE</h5>
-                        <h3 class="text-5xl font-bold font-robotocondensed text-center leading-16  uppercase text-sub_heading pt-4">love and compassion</h3>
-                        <p class="w-[846px] mx-auto text-center text-base font-robotocondensed text-sub_heading font-normal leading-6 pt-8 pb-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <h3
+                        class="uppercase font-robotocondensed leading-10 lg:leading-[64px] text-3xl md:text-5xl text-sub_heading font-bold text-center pt-1 md:pt-4 lg:pt-5">love and compassion</h3>
+                        <p class="w-full md:w-[670px] lg:w-[846px] mx-auto text-center text-sm md:text-base font-robotocondensed text-sub_heading font-normal leading-6 pt-4 pb-6 lg:pt-8 lg:pb-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                         <a href="#"
-                        class="inline-block bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">read
+                        class="inline-block bg-primary py-4 px-12 sm:py-6 sm:px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">read
                         more</a>
                     </div>
-                    <div class="w-[1030px] mx-auto mt-12 flex gap-x-6">
-                        <div class="w-[296px] h-[384px] rounded-[32px] overflow-hidden mt-[-64px]">
+                    <div class="w-full xl:w-[1030px] mx-auto mt-6 sm:mt-12 flex flex-wrap lg:flex-nowrap gap-6 justify-center">
+                        <div class="w-[48%] lg:w-[296px] h-[384px] lg:h-[384px] rounded-[32px] overflow-hidden mt-0 lg:mt-[-64px]">
                             <img class="w-full h-full object-cover" src="./images/love1.png" alt="">
                         </div>
-                        <div class="w-[390px] h-[512px] rounded-[32px] overflow-hidden">
+                        <div class="w-[48%] lg:w-[390px] h-[384px] lg:h-[512px] rounded-[32px] overflow-hidden mt-0">
                             <img class="w-full h-full object-cover" src="./images/love2.png" alt="">
                         </div>
-                        <div class="w-[296px] h-[384px] rounded-[32px] overflow-hidden mt-[-64px]">
+                        <div class="w-[48%] lg:w-[296px] h-[384px] lg:h-[384px] rounded-[32px] overflow-hidden mt-0 lg:mt-[-64px]">
                             <img class="w-full h-full object-cover" src="./images/love3.png" alt="">
                         </div>
                     </div>
-                    <div class="pt-16 text-center">
-                        <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">our mission & vision</h5>
-                        <h3 class="text-[32px] font-bold font-robotocondensed text-center leading-[44px] uppercase text-sub_heading pt-4">celebrate WITH US</h3>
-                        <p class="w-[512px] mx-auto text-center text-base font-robotocondensed text-sub_heading font-normal leading-6 py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="pt-8 lg:pt-16 text-center">
+                        <h5 class="text-sm sm:text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">our mission & vision</h5>
+                        <h3 class="text-2xl sm:text-[32px] font-bold font-robotocondensed text-center leading-[44px] uppercase text-sub_heading pt-4">celebrate WITH US</h3>
+                        <p class="w-full md:w-[400px] lg:w-[512px] mx-auto text-center text-base font-robotocondensed text-sub_heading font-normal leading-6 py-2 lg:py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <a href="#" class="text-[14px] leading-4 font-normal text-sub_heading capitalize">read more <i class="fa-solid fa-arrow-right-long ml-1.5"></i></a>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!-- ===========love end here========== -->
             <!-- ===========watch start here========== -->
             <!-- <section class="py-32 bg-watch_background">
