watch part responsive

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </nav>
         <!-- ===========Navbar end here========== -->
         <!-- ===========banner start here========== -->
-        <section class="bg-banner bg-no-repeat bg-cover bg-center py-20 sm:py-32">
+        <section class="bg-banner bg-no-repeat bg-cover bg-center py-20 lg:py-32">
             <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
                 <div class="w-full sm:w-[490px] md:w-[570px] lg:w-[592px]">
                     <h6
@@ -77,7 +77,7 @@
         </section>
         <!-- ===========banner end here========== -->
         <!-- ===========service start here========== -->
-        <section class="py-10 md:py-32">
+        <section class="py-10 lg:py-32">
             <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
                 <div>
                     <h5
@@ -116,7 +116,7 @@
         </section>
             <!-- ===========service end here========== -->
             <!-- ===========love start here========== -->
-            <section class="pb-32">
+            <section class="pb-10 lg:pb-32">
                 <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
                     <div class="text-center">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">SUB-HEADLINE</h5>
@@ -128,13 +128,13 @@
                         more</a>
                     </div>
                     <div class="w-full xl:w-[1030px] mx-auto mt-6 sm:mt-12 flex flex-wrap lg:flex-nowrap gap-6 justify-center">
-                        <div class="w-[48%] lg:w-[296px] h-[384px] lg:h-[384px] rounded-[32px] overflow-hidden mt-0 lg:mt-[-64px]">
+                        <div class="w-full sm:w-[48%] lg:w-[296px] h-[384px] lg:h-[384px] rounded-[32px] overflow-hidden mt-0 lg:mt-[-64px]">
                             <img class="w-full h-full object-cover" src="./images/love1.png" alt="">
                         </div>
-                        <div class="w-[48%] lg:w-[390px] h-[384px] lg:h-[512px] rounded-[32px] overflow-hidden mt-0">
+                        <div class="w-full sm:w-[48%] lg:w-[390px] h-[384px] lg:h-[512px] rounded-[32px] overflow-hidden mt-0">
                             <img class="w-full h-full object-cover" src="./images/love2.png" alt="">
                         </div>
-                        <div class="w-[48%] lg:w-[296px] h-[384px] lg:h-[384px] rounded-[32px] overflow-hidden mt-0 lg:mt-[-64px]">
+                        <div class="w-full sm:w-[48%] lg:w-[296px] h-[384px] lg:h-[384px] rounded-[32px] overflow-hidden mt-0 lg:mt-[-64px]">
                             <img class="w-full h-full object-cover" src="./images/love3.png" alt="">
                         </div>
                     </div>
@@ -148,45 +148,46 @@
             </section>
             <!-- ===========love end here========== -->
             <!-- ===========watch start here========== -->
-            <!-- <section class="py-32 bg-watch_background">
-                <div class="max-w-container mx-auto">
-                    <div class="text-center w-[440px] mx-auto">
+            <section class="py-10 lg:py-32 bg-watch_background">
+                <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
+                    <div class="text-center w-full lg:w-[440px] mx-auto">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">Watch and listen</h5>
-                        <h3 class="text-5xl font-bold font-robotocondensed text-center leading-16  uppercase text-sub_heading pt-4">THE benefits of joining our church</h3>
+                        <h3
+                        class="uppercase font-robotocondensed leading-10 lg:leading-[64px] text-3xl md:text-5xl text-sub_heading font-bold text-center pt-1 md:pt-4 lg:pt-5">THE benefits of joining our church</h3>
                     </div>
-                    <div class="pt-16 flex gap-6 flex-wrap">
-                        <div class="w-[302px] h-[384px] overflow-hidden relative group">
+                    <div class="pt-6 lg:pt-16 flex gap-6 flex-wrap lg:flex-nowrap justify-center">
+                        <div class="w-full sm:w-[48%] h-[370px] lg:w-[302px] lg:h-[384px] overflow-hidden relative group">
                             <picture>
                                 <img class="w-full h-full object-cover" src="./images/watch.jpg" alt="">
                             </picture>
-                            <div class="absolute left-0 top-[70%] w-full h-full p-8 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%]">
+                            <div class="absolute left-0 top-[70%] lg:top-[78%] w-full h-full p-8 lg:p-2 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%] lg:group-hover:top-[48%]">
                                 <h4 class="font-robotocondensed text-2xl font-bold uppercase text-white mb-4">WATCH AND LISTEN TO OUR SERMONS</h4>
                                 <p class="font-robotocondensed font-normal text-base text-white opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                             </div>
                         </div>
-                        <div class="w-[302px] h-[384px] overflow-hidden relative group">
+                        <div class="w-full sm:w-[48%] h-[370px] lg:w-[302px] lg:h-[384px] overflow-hidden relative group">
                             <picture>
                                 <img class="w-full h-full object-cover" src="./images/watch.jpg" alt="">
                             </picture>
-                            <div class="absolute left-0 top-[70%] w-full h-full p-8 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%]">
+                            <div class="absolute left-0 top-[70%] lg:top-[78%] w-full h-full p-8 lg:p-2 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%] lg:group-hover:top-[48%]">
                                 <h4 class="font-robotocondensed text-2xl font-bold uppercase text-white mb-4">WATCH AND LISTEN TO OUR SERMONS</h4>
                                 <p class="font-robotocondensed font-normal text-base text-white opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                             </div>
                         </div>
-                        <div class="w-[302px] h-[384px] overflow-hidden relative group">
+                        <div class="w-full sm:w-[48%] h-[370px] lg:w-[302px] lg:h-[384px] overflow-hidden relative group">
                             <picture>
                                 <img class="w-full h-full object-cover" src="./images/watch.jpg" alt="">
                             </picture>
-                            <div class="absolute left-0 top-[70%] w-full h-full p-8 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%]">
+                            <div class="absolute left-0 top-[70%] lg:top-[78%] w-full h-full p-8 lg:p-2 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%] lg:group-hover:top-[48%]">
                                 <h4 class="font-robotocondensed text-2xl font-bold uppercase text-white mb-4">WATCH AND LISTEN TO OUR SERMONS</h4>
                                 <p class="font-robotocondensed font-normal text-base text-white opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                             </div>
                         </div>
-                        <div class="w-[302px] h-[384px] overflow-hidden relative group">
+                        <div class="w-full sm:w-[48%] h-[370px] lg:w-[302px] lg:h-[384px] overflow-hidden relative group">
                             <picture>
                                 <img class="w-full h-full object-cover" src="./images/watch.jpg" alt="">
                             </picture>
-                            <div class="absolute left-0 top-[70%] w-full h-full p-8 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%]">
+                            <div class="absolute left-0 top-[70%] lg:top-[78%] w-full h-full p-8 lg:p-2 bg-overlay transition-all ease-linear duration-500 group-hover:top-[45%] lg:group-hover:top-[48%]">
                                 <h4 class="font-robotocondensed text-2xl font-bold uppercase text-white mb-4">WATCH AND LISTEN TO OUR SERMONS</h4>
                                 <p class="font-robotocondensed font-normal text-base text-white opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                             </div>
@@ -194,7 +195,7 @@
                     </div>
                     <div></div>
                 </div>
-            </section> -->
+            </section>
             <!-- ===========watch end here========== -->
             <!-- ===========upcoming start here========== -->
             <!-- <section class="py-32">
