--- a/index.html
+++ b/index.html
@@ -198,26 +198,27 @@
             </section>
             <!-- ===========watch end here========== -->
             <!-- ===========upcoming start here========== -->
-            <!-- <section class="py-32">
-                <div class="max-w-container mx-auto">
-                    <div class="text-center w-[554px] mx-auto">
+            <section class="py-10 lg:py-32">
+                <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
+                    <div class="text-center w-full lg:w-[554px] mx-auto">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">Upcoming SERMONS</h5>
-                        <h3 class="text-5xl font-bold font-robotocondensed text-center leading-16  uppercase text-sub_heading pt-4">join us and become part of something great</h3>
+                        <h3
+                        class="uppercase font-robotocondensed leading-10 lg:leading-[64px] text-3xl md:text-5xl text-sub_heading font-bold text-center pt-1 md:pt-4 lg:pt-5">join us and become part of something great</h3>
                     </div>
-                    <div class="mt-16 bg-service_item_background w-full h-[512px] flex">
-                        <div class="w-[435px] h-full py-[61px] px-[90px] relative">
+                    <div class="mt-8 lg:mt-16 bg-service_item_background w-full h-[430px] lg:h-[512px] lg:flex">
+                        <div class="w-full h-full py-[20px] px-[15px] lg:py-[61px] lg:px-[90px] relative">
                             <h5 style="-webkit-background-clip: text;
                             -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Upcoming Event</h5>
-                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
-                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <h4 class="py-4 uppercase font-robotocondensed font-bold text-sm lg:text-2xl text-sub_heading pr-[100px] lg:pr-[105px] xl:pr-[225px] leading-6">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-sm lg:text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                             <div class="mt-8 flex gap-4 flex-col">
                                 <div class="flex gap-4 items-start">
                                     <div>
                                         <i class="fa-regular fa-clock text-xl"></i>
                                     </div>
                                     <div>
-                                        <p class="font-robotocondensed text-base font-normal leading-6 text-sub_heading">Friday 23:39 IST</p>
-                                        <p class="font-robotocondensed text-base font-normal leading-6 text-sub_heading">Saturday 11:20 ISD</p>
+                                        <p class="font-robotocondensed text-sm lg:text-base font-normal leading-6 text-sub_heading">Friday 23:39 IST</p>
+                                        <p class="font-robotocondensed text-sm lg:text-base font-normal leading-6 text-sub_heading">Saturday 11:20 ISD</p>
                                     </div>
                                 </div>
                                 <div class="flex gap-4 items-start">
@@ -225,8 +226,8 @@
                                         <i class="fa-regular fa-clock text-xl"></i>
                                     </div>
                                     <div>
-                                        <p class="font-robotocondensed text-base font-normal leading-6 text-sub_heading">Friday 23:39 IST</p>
-                                        <p class="font-robotocondensed text-base font-normal leading-6 text-sub_heading">Saturday 11:20 ISD</p>
+                                        <p class="font-robotocondensed text-sm lg:text-base font-normal leading-6 text-sub_heading">Friday 23:39 IST</p>
+                                        <p class="font-robotocondensed text-sm lg:text-base font-normal leading-6 text-sub_heading">Saturday 11:20 ISD</p>
                                     </div>
                                 </div>
                             </div>
@@ -236,15 +237,15 @@
                                 <span class="font-robotocondensed font-normal text-base text-sub_heading uppercase leading-none">JULY</span>
                             </div>
                         </div>
-                        <div class="w-[845px] h-full overflow-hidden">
+                        <div class="w-full lg:w-[845px] h-full overflow-hidden">
                             <img class="w-full h-full object-cover leading-none" src="./images/upcoming_part.jpg" alt="">
                         </div>
                     </div>
-                    <div class="text-right mt-12">
+                    <div class="text-center lg:text-right mt-[460px] lg:mt-12">
                         <a href="#" class="font-robotocondensed font-normal text-2xl text-sub_heading capitalize">View all Sermons <i class="fa-solid fa-arrow-right-long ml-[11px]"></i></a>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!-- ===========upcoming end here========== -->
             <!-- ===========visit start here========== -->
             <!-- <section class="bg-visit_bg bg-no-repeat bg-center bg-cover py-32">
