visit part responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
                 <div class="flex items-center justify-between">
                     <div
-                        class="w-[auto] sm:w-[200px] relative after:absolute after:content-[''] after:w-0.5 after:h-20 2xl:after:h-[87px] after:bg-transparent xl:after:bg-white after:right-0 xl:after:right-[-30px] after:top-[-24px] after:opacity-25">
+                        class="w-[auto] sm:w-[200px] relative after:absolute after:content-[''] after:w-0.5 after:h-20 2xl:after:h-[80px] after:bg-transparent xl:after:bg-white after:right-0 xl:after:right-[-30px] after:top-[-24px] after:opacity-25">
                         <img class="w-[70%] md:w-full" src="images/logo.png" alt="">
                     </div>
                     <div class="hidden lg:block">
@@ -248,18 +248,18 @@
             </section>
             <!-- ===========upcoming end here========== -->
             <!-- ===========visit start here========== -->
-            <!-- <section class="bg-visit_bg bg-no-repeat bg-center bg-cover py-32">
-                <div class="max-w-container mx-auto">
-                    <div class="w-[768px] bg-white mx-auto py-[72px] px-[48px] border-b-[16px] border-primary relative">
-                        <h2 class="uppercase font-robotocondensed font-bold text-5xl leading-[64px] w-[370px] text-sub_heading">We want to serve the world around us</h2>
-                        <p class="py-4 capitalize font-robotocondensed font-normal text-sub_heading text-base w-[302px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</p>
-                        <a href="#" class="inline-block bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">Visit</a>
-                        <picture class="absolute top-[170px] right-12">
+            <section class="bg-visit_bg bg-no-repeat bg-center bg-cover py-10 lg:py-32">
+                <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
+                    <div class="w-full lg:w-[768px] bg-white mx-auto py-[30px] px-[20px] lg:py-[72px] lg:px-[48px] border-b-[16px] border-primary relative">
+                        <h2 class="uppercase font-robotocondensed font-bold text-2xl lg:text-5xl leading-8 lg:leading-[64px] w-full lg:w-[370px] text-sub_heading">We want to serve the world around us</h2>
+                        <p class="py-3 lg:py-4 capitalize font-robotocondensed font-normal text-sub_heading text-sm lg:text-base w-full lg:w-[302px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</p>
+                        <a href="#" class="inline-block bg-primary py-4 px-12 lg:py-6 lg:px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4">Visit</a>
+                        <picture class="hidden lg:block absolute top-[170px] right-12">
                             <img src="./images/visit_icon.png" alt="">
                         </picture>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!-- ===========visit end here========== -->
             <!-- ===========blog start here========== -->
             <!-- <section class="py-32">
