--- a/index.html
+++ b/index.html
@@ -262,48 +262,49 @@
             </section>
             <!-- ===========visit end here========== -->
             <!-- ===========blog start here========== -->
-            <!-- <section class="py-32">
-                <div class="max-w-container mx-auto">
-                    <div class="text-center w-[554px] mx-auto">
+            <section class="py-10 lg:py-32">
+                <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
+                    <div class="text-center w-full lg:w-[554px] mx-auto">
                         <h5 class="text-base font-robotocondensed font-normal uppercase text-center text-sub_heading">Read our Blog</h5>
-                        <h3 class="text-5xl font-bold font-robotocondensed text-center leading-16  uppercase text-sub_heading pt-4">SHARE, INSPIRE, INNOVATE</h3>
+                        <h3
+                        class="uppercase font-robotocondensed leading-10 lg:leading-[64px] text-3xl md:text-5xl text-sub_heading font-bold text-center pt-1 md:pt-4 lg:pt-5">SHARE, INSPIRE, INNOVATE</h3>
                     </div>
-                    <div class="mt-16 flex flex-wrap gap-6">
-                        <div class="bg-service_item_background px-8 py-12 w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
+                    <div class="mt-8 lg:mt-16 flex flex-wrap lg:flex-nowrap gap-6 justify-center">
+                        <div class="bg-service_item_background px-2 py-8 xl:px-6 xl:py-10 w-full sm:w-[48%] lg:w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
                             <h5 style="-webkit-background-clip: text;
                             -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Relationship</h5>
-                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
-                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                            <h4 class="mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
+                            <h4 class="py-4 xl:py-6 uppercase font-robotocondensed font-bold text-base xl:text-2xl text-sub_heading pr-0 lg:pr-[85px]">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-sm xl:text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <h4 class="mt-6 xl:mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
                             <h5 class="mt-1 font-robotocondensed text-base font-normal text-sub_heading capitalize leading-6">Tuesday 13 May, 2021</h5>
                         </div>
-                        <div class="bg-service_item_background px-8 py-12 w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
+                        <div class="bg-service_item_background px-2 py-8 xl:px-6 xl:py-10 w-full sm:w-[48%] lg:w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
                             <h5 style="-webkit-background-clip: text;
                             -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Relationship</h5>
-                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
-                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                            <h4 class="mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
+                            <h4 class="py-4 xl:py-6 uppercase font-robotocondensed font-bold text-base xl:text-2xl text-sub_heading pr-0 lg:pr-[85px]">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-sm xl:text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <h4 class="mt-6 xl:mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
                             <h5 class="mt-1 font-robotocondensed text-base font-normal text-sub_heading capitalize leading-6">Tuesday 13 May, 2021</h5>
                         </div>
-                        <div class="bg-service_item_background px-8 py-12 w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
+                        <div class="bg-service_item_background px-2 py-8 xl:px-6 xl:py-10 w-full sm:w-[48%] lg:w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
                             <h5 style="-webkit-background-clip: text;
                             -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Relationship</h5>
-                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
-                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                            <h4 class="mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
+                            <h4 class="py-4 xl:py-6 uppercase font-robotocondensed font-bold text-base xl:text-2xl text-sub_heading pr-0 lg:pr-[85px]">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-sm xl:text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <h4 class="mt-6 xl:mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
                             <h5 class="mt-1 font-robotocondensed text-base font-normal text-sub_heading capitalize leading-6">Tuesday 13 May, 2021</h5>
                         </div>
-                        <div class="bg-service_item_background px-8 py-12 w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
+                        <div class="bg-service_item_background px-2 py-8 xl:px-6 xl:py-10 w-full sm:w-[48%] lg:w-[302px] relative after:absolute after:content-[''] after:bottom-0 after:left-0 after:w-0 after:h-4 after:bg-primary after:transition-all after:ease-linear after:duration-500 hover:after:w-full">
                             <h5 style="-webkit-background-clip: text;
                             -webkit-text-fill-color: transparent;" class="text-xs uppercase font-robotocondensed font-bold tracking-[0.96px] bg-clip-text bg-text_gradient">Relationship</h5>
-                            <h4 class="py-4 uppercase font-robotocondensed font-bold text- text-sub_heading pr-[105px]">WATCH AND LISTEN TO OUR SERMONS</h4>
-                            <p class="font-normal font-robotocondensed text-sub_heading text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                            <h4 class="mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
+                            <h4 class="py-4 xl:py-6 uppercase font-robotocondensed font-bold text-base xl:text-2xl text-sub_heading pr-0 lg:pr-[85px]">WATCH AND LISTEN TO OUR SERMONS</h4>
+                            <p class="font-normal font-robotocondensed text-sub_heading text-sm xl:text-base leading-6 opacity-75">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <h4 class="mt-6 xl:mt-12 text-[18px] font-robotocondensed font-normal text-sub_heading leading-normal capitalize">By Mathew Johnson</h4>
                             <h5 class="mt-1 font-robotocondensed text-base font-normal text-sub_heading capitalize leading-6">Tuesday 13 May, 2021</h5>
                         </div>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!-- ===========blog end here========== -->
             <!-- ===========footer start here========== -->
             <!-- <footer class="bg-sub_heading py-16 ">
