--- a/index.html
+++ b/index.html
@@ -307,15 +307,15 @@
             </section>
             <!-- ===========blog end here========== -->
             <!-- ===========footer start here========== -->
-            <!-- <footer class="bg-sub_heading py-16 ">
-                <div class="max-w-container mx-auto">
-                    <div class="flex">
-                        <div>
-                            <div>
-                                <img src="./images/logo_footer.png" alt="">
+            <footer class="bg-sub_heading py-8 lg:py-16">
+                <div class="w-full 2xl:max-w-container mx-auto px-2 sm:px-4 lg:px-8">
+                    <div class="flex justify-between xl:justify-normal sm:gap-x-[180px] xl:gap-x-0 flex-wrap xl:flex-nowrap">
+                        <div class="">
+                            <div class="overflow-hidden">
+                                <img class="w-full h-hull object-cover" src="./images/logo_footer.png" alt="">
                             </div>
-                            <span class="inline-block text-white font-robotocondensed uppercase font-normal text-xs pt-4">© Copyright Finsweet 2022</span>
-                            <ul class="pt-8 flex flex-col gap-4">
+                            <span class="inline-block text-white font-robotocondensed uppercase font-normal text-xs pt-4 xl:w-[149px]">© Copyright Finsweet 2022</span>
+                            <ul class="pt-4 lg:pt-8 flex flex-col gap-4">
                                 <li>
                                     <span class="inline-block text-white font-robotocondensed uppercase font-normal text-xs">(480) 555-0103</span>
                                 </li>
@@ -327,9 +327,9 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="ml-[260px]">
+                        <div class="xl:ml-[200px]">
                             <h6 class="font-robotocondensed font-normal text-base text-white capitalize">Quicklinks</h6>
-                            <ul class="mt-5 flex flex-col gap-6">
+                            <ul class="mt-4 lg:mt-5 flex flex-col gap-5 lg:gap-6">
                                 <li>
                                     <a class="inline-block uppercase font-robotocondensed text-xs text-white opacity-75" href="#">About us</a>
                                 </li>
@@ -344,9 +344,9 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="ml-[72px]">
+                        <div class="mt-8 xl:ml-[72px]">
                             <h6 class="font-robotocondensed font-normal text-base text-white capitalize">Connect</h6>
-                            <ul class="mt-5 flex gap-5">
+                            <ul class="mt-2 lg:mt-5 flex gap-5">
                                 <li>
                                     <a href="#" class="text-primary">
                                         <i class="fa-brands fa-facebook text-base text-primary"></i>
@@ -364,16 +364,16 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="ml-[115px]">
-                            <h3 class="uppercase font-robotocondensed font-bold text-white text-[32px] leading-[44px] w-[377px] mb-8">Subscribe to get Latest Updates and News</h3>
-                            <form action="" method="" class="w-[512px] relative border-[1px] rounded-xl">
-                                <input class="outline-0 text-white font-robotocondensed text-base font-normal border-slate-400 p-5 w-full bg-transparent" type="email" placeholder="Yourmail@gmail.com">
-                                <button class=" absolute right-0 top-0 bg-primary py-6 px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4" type="submit">Subscribe</button>
+                        <div class="mt-8 xl:ml-[115px] w-full">
+                            <h3 class="uppercase font-robotocondensed font-bold text-white text-[25px] lg:text-[32px] leading-10 lg:leading-[44px] w-[377px] mb-8">Subscribe to get Latest Updates and News</h3>
+                            <form action="" method="" class="w-full sm:w-[500px] xl:w-[512px] relative border-[1px] rounded-xl">
+                                <input class="outline-none text-white font-robotocondensed text-sm lg:text-base font-normal border-slate-400 p-3 lg:p-5 w-full bg-transparent" type="email" placeholder="Yourmail@gmail.com">
+                                <button class=" absolute right-0 top-0 bg-primary py-[14px] px-10 lg:py-6 lg:px-16 rounded-xl text-nav_btn text-base font-normal uppercase font-robotocondensed leading-4" type="submit">Subscribe</button>
                             </form>
                         </div>
                     </div>
                 </div>
-            </footer> -->
+            </footer>
             <!-- ===========footer end here========== -->
             <script src="tailwind.config.js"></script>
         </body>
