code problem solve

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                     </div>
                     
                 </div>
+            </div>
         </section>
             <!-- ===========service end here========== -->
             <!-- ===========love start here========== -->
